kinda fixed image flickering in carousel

--- a/src/components/ArtistList.css
+++ b/src/components/ArtistList.css
@@ -7,6 +7,7 @@ h1 {
 	margin: 2% 2%;
 	text-align: center;
 	letter-spacing: 5px;
+	width: 100%;
 }
 
 h4 {
