--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -37,6 +37,9 @@
 
 .wrapper {
 	overflow-y: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
 }
 
 .selector:hover {
@@ -53,6 +56,7 @@ section.wrapper {
 	width: 100%;
 	height: 100%;
 	background-size: cover;
+	-moz-transition: background-image 500ms ease-in-out;
 	transition: background-image 500ms ease-in-out;
 }
 
